# quant-binance-spot

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  README.md  STRATEGY_DEVELOPMENT.md  STRATEGY_TYPES_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
config/: L25_R1_btc_risk.yaml  L25_R2_dd_throttle.yaml  L25_W2_weights.yaml  L2_A1_trailing_stop.yaml  L2_B1_blend_40_40_20.yaml  R2_E2_regime.yaml  R2_E4_carry_sleeve.yaml  base.yaml  dca.yaml  dev.yaml  dual_momentum.yaml  futures_alt_ensemble.yaml  futures_bb_mean_reversion.yaml  futures_breakout_vol.yaml  futures_ensemble.yaml  futures_ensemble_nw_tsmom.yaml  futures_full_history.yaml  futures_funding_carry.yaml  futures_macd_momentum.yaml  futures_multi_factor.yaml  futures_multi_strat_ensemble.yaml  futures_nwkl.yaml  futures_rsi_adx_atr.yaml  futures_rsi_adx_atr_15m.yaml  futures_rsi_adx_atr_4h.yaml  futures_rsi_adx_atr_enhanced.yaml  futures_rsi_adx_atr_opt.yaml  futures_rsi_adx_atr_v2.yaml  futures_tsmom.yaml  futures_xsmom.yaml  my_strategy_example.yaml  polymarket_15m.yaml  polymarket_bot.yaml  prod_candidate_R1.yaml  prod_candidate_R1_aggr_B.yaml  prod_candidate_R1_aggr_C.yaml  prod_candidate_R3C_universe.yaml  prod_candidate_htf_filter.yaml  prod_candidate_htf_lsr.yaml  prod_candidate_meta_blend.yaml  (+45 more)
deploy/: setup.sh
docs/: ACTIVE_BUY_APP_MVP.md  ACTIVE_BUY_ARCHITECTURE.md  ALPHA_RESEARCH_MAP.md  ARCHITECTURE_PROPOSAL.md  CLI_REFERENCE.md  COMMAND_LINE_USAGE.md  (+16 more)
(+14285 files in other folders)
